--- a/TodoAppKata/TodoApp.Api.Tests/TodoApp.Api.Tests.csproj
+++ b/TodoAppKata/TodoApp.Api.Tests/TodoApp.Api.Tests.csproj
@@ -8,6 +8,8 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="AutoFixture" Version="4.18.0" />
+        <PackageReference Include="FluentAssertions" Version="6.11.0" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.11.0" />
         <PackageReference Include="Moq" Version="4.18.4" />
         <PackageReference Include="xunit" Version="2.4.1" />
