--- a/DotnetBasics/DotnetBasics.API/DotnetBasics.API.csproj
+++ b/DotnetBasics/DotnetBasics.API/DotnetBasics.API.csproj
@@ -8,5 +8,8 @@
 
     <ItemGroup>
       <PackageReference Include="MediatR" Version="12.1.1" />
+      <PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="6.5.0" />
+      <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="6.5.0" />
+      <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="6.5.0" />
     </ItemGroup>
 </Project>
