--- a/DotnetBasics/DotnetBasics.API/DotnetBasics.API.csproj
+++ b/DotnetBasics/DotnetBasics.API/DotnetBasics.API.csproj
@@ -12,4 +12,8 @@
       <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="6.5.0" />
       <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="6.5.0" />
     </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\DotnetBasics.Infrastructure\DotnetBasics.Infrastructure.csproj" />
+    </ItemGroup>
 </Project>
