refacto projects dependencies

--- a/DotnetBasics/DotnetBasics.API/DotnetBasics.API.csproj
+++ b/DotnetBasics/DotnetBasics.API/DotnetBasics.API.csproj
@@ -15,5 +15,6 @@
 
     <ItemGroup>
       <ProjectReference Include="..\DotnetBasics.Infrastructure\DotnetBasics.Infrastructure.csproj" />
+      <ProjectReference Include="..\DotnetBasics.Application\DotnetBasics.Application.csproj" />
     </ItemGroup>
 </Project>
