--- a/DotnetBasics/DotnetBasics.Infrastructure/DotnetBasics.Infrastructure.csproj
+++ b/DotnetBasics/DotnetBasics.Infrastructure/DotnetBasics.Infrastructure.csproj
@@ -12,6 +12,7 @@
 
     <ItemGroup>
       <PackageReference Include="MongoDB.Driver" Version="2.22.0" />
+      <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="6.0.0" />
     </ItemGroup>
 
 </Project>
