--- a/DotnetBasics/DotnetBasics.API/appsettings.json
+++ b/DotnetBasics/DotnetBasics.API/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "MongoDB": {
+    "ConnectionURI": "ATLAS_URI_HERE",
+    "DatabaseName": "sample_mflix",
+    "CollectionName": "playlist"
+}
 }
