--- a/DotnetBasics/DotnetBasics.Infrastructure/DotnetBasics.Infrastructure.csproj
+++ b/DotnetBasics/DotnetBasics.Infrastructure/DotnetBasics.Infrastructure.csproj
@@ -12,7 +12,7 @@
 
     <ItemGroup>
       <PackageReference Include="MongoDB.Driver" Version="2.22.0" />
-      <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="6.0.0" />
+      <PackageReference Include="Microsoft.Extensions.Options" Version="8.0.0-rc.2.23479.6" />
     </ItemGroup>
 
 </Project>
